refactor: toList()로 Java 16이상에 맞게 변경